# django-testing

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: plan-include-tests.mdc
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_detail.html  post_list.html
config/: settings.py  urls.py
docs/: DJANGO_TUTORIAL.md
pages/: models.py  urls.py  views.py
pages/migrations/: 0001_initial.py
pages/templates/pages/: home.html
templates/: base.html
